--- a/1_hello_world/QtHelloWorld.ui
+++ b/1_hello_world/QtHelloWorld.ui
@@ -25,7 +25,7 @@
     <item>
      <widget class="QLabel" name="hellolabel">
       <property name="text">
-       <string>Hello Igor Lima</string>
+       <string>Hello Otávio Cardoso</string>
       </property>
      </widget>
     </item>
